--- a/templates/works.html
+++ b/templates/works.html
@@ -70,10 +70,10 @@
                     <div class="col-sm-4">
 
                       <a href="./work.html" title="" class="black-image-project-hover">
-                        <img src="./static/assets/images/work01-hover.jpg" alt="" class="img-responsive">
+                        <img src="./static/assets/images/plant.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
-                        <h4>001/006</h4>
+                        <h4>001/002</h4>
                         <h3>Plant Monitoring System</h3>
                         <p>This monitors the condition of the plant and allows us to remotely monitor the plant. </p>
                         <a href="./work.html" title="" class="btn btn-default">Discover</a>
@@ -81,26 +81,16 @@
                     </div>
                     <div class="col-sm-4">
                       <a href="./work.html" title="" class="black-image-project-hover">
-                        <img src="./static/assets/images/work02-hover.jpg" alt="" class="img-responsive">
+                        <img src="./static/assets/images/smsspam.png" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
-                        <h4>002/006</h4>
+                        <h4>002/002</h4>
                         <h3>SMS spam Classification</h3>
                         <p>This classifies an email as ham/spam</p>
                         <a href="./work.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
-                    <div class="col-sm-4">
-                      <a href="./work.html" title="" class="black-image-project-hover">
-                        <img src="./static/assets/images/work03-hover.jpg" alt="" class="img-responsive">
-                      </a>
-                      <div class="card-container card-container-lg">
-                        <h4>003/006</h4>
-                        <h3>Vivamus vestibulum</h3>
-                        <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
-                        <a href="./work.html" title="" class="btn btn-default">Discover</a>
-                      </div>
-                    </div>
+                    
                     
                 </div>
                 <!--/row-->
