--- a/templates/about.html
+++ b/templates/about.html
@@ -67,6 +67,7 @@
                   <p>I am passionate about coding especially in the fields of Machine learning and Python. 
                 </div>
                 <div class="col-xs-12 col-md-6">
+                  <img src="assets/images/myprof.jpg" class="img-responsive" alt="">
                 </div>
               </div>
             </div>
@@ -78,16 +79,6 @@
     </div>
   </div>
 
-
-<footer class="footer-container text-center">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12">
-        <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
-      </div>
-    </div>
-  </div>
-</footer>
 
 <script>
   document.addEventListener("DOMContentLoaded", function (event) {
