--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
   <meta name="msapplication-tap-highlight" content="no">
   
   <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
-  <link href="./static/assets/favicon.ico" rel="icon">
+  <link href="./static/assets/medal.ico" rel="icon">
 
   <title>Title page</title>  
 
@@ -48,7 +48,7 @@
   </nav>
 </header>
 <!-- Add your site or app content here -->
-  <div class="hero-full-container background-image-container white-text-container" style="background-image: url('./static/assets/images/space.jpg')">
+  <div class="hero-full-container background-image-container white-text-container" style="background-image: url('./static/assets/images/home.jpg')">
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
@@ -58,7 +58,7 @@
                 <span id="typed-strings">
                   <span>I'm Stefani Jeyaseelan</span>
                   <span>3rd year B.Tech student</span>
-                  <span>Studying in VIT</span>
+                  <span>Studying in VIT Chennai</span>
                 </span>
                 <span id="typed"></span>
               </h1>
