--- a/templates/about.html
+++ b/templates/about.html
@@ -12,12 +12,12 @@
   <!-- Disable tap highlight on IE  -->
   <meta name="msapplication-tap-highlight" content="no">
   
-  <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
-  <link href="./static/assets/favicon.ico" rel="icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-icon-180x180.png">
+  <link href="assets/favicon.ico" rel="icon">
 
   <title>Title page</title>  
 
-<link href="./static/main.3f6952e4.css" rel="stylesheet"></head>
+<link href="main.3f6952e4.css" rel="stylesheet"></head>
 
 <body class="">
 <div id="site-border-left"></div>
@@ -63,8 +63,8 @@
                 <div class="col-xs-12 col-md-6">
                   <h3>Education</h3>
                   <p>I completed my schooling in St. Michael's Academy. Secured 92.7 in my 12th Grade (ISC)</p>
-                  <h3>Interests </h3>
-                  <p>I am passionate about coding especially in the fields of Machine learning and Python. 
+                  <h3>Interests  </h3>
+                  <p>I am passionate about coding especially in the fields of Machine learning and Python.
                 </div>
                 <div class="col-xs-12 col-md-6">
                   <img src="assets/images/myprof.jpg" class="img-responsive" alt="">
@@ -78,6 +78,7 @@
       </div>
     </div>
   </div>
+
 
 
 <script>
@@ -99,6 +100,6 @@
   ga('send', 'pageview');
 </script>
 
---> <script type="text/javascript" src="./static/main.70a66962.js"></script></body>
+--> <script type="text/javascript" src="main.70a66962.js"></script></body>
 
 </html>
