--- a/templates/works.html
+++ b/templates/works.html
@@ -70,13 +70,13 @@
                     <div class="col-sm-4">
 
                       <a href="./work.html" title="" class="black-image-project-hover">
-                        <img src="./static/assets/images/plant.jpg" alt="" class="img-responsive">
+                        <img src="./static/assets/images/plant.jpeg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>001/002</h4>
                         <h3>Plant Monitoring System</h3>
                         <p>This monitors the condition of the plant and allows us to remotely monitor the plant. </p>
-                        <a href="./work.html" title="" class="btn btn-default">Discover</a>
+                  
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -87,7 +87,7 @@
                         <h4>002/002</h4>
                         <h3>SMS spam Classification</h3>
                         <p>This classifies an email as ham/spam</p>
-                        <a href="./work.html" title="" class="btn btn-default">Discover</a>
+                      
                       </div>
                     </div>
                     
