--- a/templates/about.html
+++ b/templates/about.html
@@ -61,13 +61,19 @@
             <div class="col-md-10 col-md-offset-1">
               <div class="row">
                 <div class="col-xs-12 col-md-6">
-                  <h3>Education</h3>
-                  <p>I completed my schooling in St. Michael's Academy. Secured 92.7 in my 12th Grade (ISC)</p>
-                  <h3>Interests  </h3>
-                  <p>I am passionate about coding especially in the fields of Machine learning and Python.
+                  <h3>Consectetur adipiscing elit</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus at sem quis varius. 
+                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras ultrices hendrerit nisl.</p>
+                  <h3>Ut enim ad minim  </h3>
+                  <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+                  <h3>Maecenas luctus at sem quis varius</h3>
+                  <p>
+                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan iaculis blandit. Cras ultrices hendrerit nisl.</p>
                 </div>
                 <div class="col-xs-12 col-md-6">
-                  <img src="assets/images/myprof.jpg" class="img-responsive" alt="">
+                  <img src="assets/images/profil.jpg" class="img-responsive" alt="">
                 </div>
               </div>
             </div>
@@ -80,6 +86,15 @@
   </div>
 
 
+<footer class="footer-container text-center">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
+      </div>
+    </div>
+  </div>
+</footer>
 
 <script>
   document.addEventListener("DOMContentLoaded", function (event) {
