--- a/templates/about.html
+++ b/templates/about.html
@@ -9,15 +9,15 @@
   <meta name="google" content="notranslate" />
   <meta content="Mashup templates have been developped by Orson.io team" name="author">
 
-  <!-- Disable tap highlight on IE  -->
+  <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
   
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-icon-180x180.png">
-  <link href="assets/favicon.ico" rel="icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
+  <link href="./static/assets/favicon.ico" rel="icon">
 
   <title>Title page</title>  
 
-<link href="main.3f6952e4.css" rel="stylesheet"></head>
+<link href="./static/main.3f6952e4.css" rel="stylesheet"></head>
 
 <body class="">
 <div id="site-border-left"></div>
@@ -50,7 +50,8 @@
 </header>
 
 <div class="section-container">
-    <div class="container">
+  <div class="container">
+    
       <div class="row">
         <div class="col-xs-12">
           <div class="section-container-spacer text-center">
