--- a/templates/about.html
+++ b/templates/about.html
@@ -74,7 +74,6 @@
                   Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan iaculis blandit. Cras ultrices hendrerit nisl.</p>
                 </div>
                 <div class="col-xs-12 col-md-6">
-                  <img src="assets/images/profil.jpg" class="img-responsive" alt="">
                 </div>
               </div>
             </div>
@@ -87,15 +86,17 @@
   </div>
 
 
-<footer class="footer-container text-center">
+<!-- Add the image section -->
+<section class="image-section">
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
+        <h2>Our Beautiful Image</h2>
+        <img src="./static/assets/images/myprof.jpg" alt="Your Image Description" class="img-responsive">
       </div>
     </div>
   </div>
-</footer>
+</section>
 
 <script>
   document.addEventListener("DOMContentLoaded", function (event) {
