--- a/templates/about.html
+++ b/templates/about.html
@@ -86,17 +86,17 @@
   </div>
 
 
-<!-- Add the image section -->
-<section class="image-section">
+<!-- Add the centered image section with space below -->
+<section class="image-section text-center">
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <h2>Our Beautiful Image</h2>
-        <img src="./static/assets/images/myprof.jpg" alt="Your Image Description" class="img-responsive">
+        <img src="./static/assets/images/myprof.jpg" alt="Your Image Description" class="img-responsive mx-auto my-4">
       </div>
     </div>
   </div>
 </section>
+
 
 <script>
   document.addEventListener("DOMContentLoaded", function (event) {
