--- a/templates/about.html
+++ b/templates/about.html
@@ -90,13 +90,12 @@
 <section class="image-section text-center">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-md-6 offset-md-6">
         <img src="./static/assets/images/myprof.jpg" alt="Your Image Description" class="img-responsive mx-auto my-4">
       </div>
     </div>
   </div>
 </section>
-
 
 <script>
   document.addEventListener("DOMContentLoaded", function (event) {
