--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width,initial-scale=1" name="viewport">
   <meta content="description" name="description">
   <meta name="google" content="notranslate" />
-  <meta content="Mashup templates have been developped by Orson.io team" name="author">
+  <meta content="Mashup templates have been developed by Orson.io team" name="author">
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
@@ -16,17 +16,32 @@
 
   <title>Title page</title>  
 
-<link href="./static/main.3f6952e4.css" rel="stylesheet"></head>
+  <link href="./static/main.3f6952e4.css" rel="stylesheet">
+
+  <style>
+    .navbar-inverse .navbar-nav>li>a {
+      font-weight: bold;
+      font-size: 18px; /* Adjust the font size as needed */
+      padding: 15px 20px; /* Adjust the padding as needed */
+    }
+
+    .navbar-inverse .navbar-nav>li>a:hover,
+    .navbar-inverse .navbar-nav>li>a:focus {
+      background-color: #333; /* Change the background color on hover/focus */
+      color: #fff; /* Change the text color on hover/focus */
+    }
+  </style>
+</head>
 
 <body class="minimal">
-<div id="site-border-left"></div>
-<div id="site-border-right"></div>
-<div id="site-border-top"></div>
-<div id="site-border-bottom"></div>
-<!-- Add your content of header -->
-<header>
-  <nav class="navbar  navbar-fixed-top navbar-inverse">
-    <div class="container">
+  <div id="site-border-left"></div>
+  <div id="site-border-right"></div>
+  <div id="site-border-top"></div>
+  <div id="site-border-bottom"></div>
+  <!-- Add your content of header -->
+  <header>
+    <nav class="navbar  navbar-fixed-top navbar-inverse">
+      <div class="container">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
@@ -34,20 +49,19 @@
           <span class="icon-bar"></span>
         </button>
 
-      <div class="collapse navbar-collapse" id="navbar-collapse">
-        <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./works.html" title="">02 : Works</a></li>
-          <li><a href="./about.html" title="">03 : About me</a></li>
-          <li><a href="./contact.html" title="">04 : Contact</a></li>
-        </ul>
+        <div class="collapse navbar-collapse" id="navbar-collapse">
+          <ul class="nav navbar-nav ">
+            <li><a href="./index.html" title="">01 : Home</a></li>
+            <li><a href="./works.html" title="">02 : Works</a></li>
+            <li><a href="./about.html" title="">03 : About me</a></li>
+            <li><a href="./contact.html" title="">04 : Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
 
-
-      </div> 
-    </div>
-  </nav>
-</header>
-<!-- Add your site or app content here -->
+  <!-- Your existing code -->
   <div class="hero-full-container background-image-container white-text-container" style="background-image: url('./static/assets/images/home.jpg')">
     <div class="container">
       <div class="row">
@@ -69,14 +83,13 @@
     </div>
   </div>
 
-<script>
-  document.addEventListener("DOMContentLoaded", function (event) {
-     type();
-     movingBackgroundImage();
-  });
-</script>
+  <script>
+    document.addEventListener("DOMContentLoaded", function (event) {
+      type();
+      movingBackgroundImage();
+    });
+  </script>
 
-
-<script type="text/javascript" src="./static/main.70a66962.js"></script></body>
-
+  <script type="text/javascript" src="./static/main.70a66962.js"></script>
+</body>
 </html>
