--- a/templates/about.html
+++ b/templates/about.html
@@ -65,16 +65,13 @@
                   <img src="./static/assets/images/myprof.jpg" alt="Your Image Description" class="img-responsive mx-auto my-4">
                 </div>
                 <div class="col-xs-12 col-md-6 order-md-1">
-                  <h3>Consectetur adipiscing elit</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus at sem quis varius. 
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras ultrices hendrerit nisl.</p>
-                  <h3>Ut enim ad minim  </h3>
-                  <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
-                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
-                  <h3>Maecenas luctus at sem quis varius</h3>
+                  <h3>Education</h3>
+                  <p>I achieved a 92.7% score in my 12th-grade (ISC) examinations. Currently, I am pursuing a Bachelor's degree in Computer Science with a specialization in Artificial Intelligence and Machine Learning at VIT Chennai.</p>
+                  <h3>My interests  </h3>
+                  <p>My passion lies in the field of Machine Learning, where I find fulfillment in delving into various programming languages to tackle intricate problems. Committed to contributing to the forefront of Artificial Intelligence and Machine Learning, my goal is to drive advancements in the field through dedicated and impactful work.
+                  <h3>Hobbies</h3>
                   <p>
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan iaculis blandit. Cras ultrices hendrerit nisl.</p>
+                  Apart from my main interests, I find joy in diverse hobbies. Sewing allows me to express my creativity through fabric, designing lets me explore artistic concepts, and gardening provides a peaceful connection with nature. Reading books is a constant source of knowledge and imagination, while listening to music serves as a delightful escape into different melodies and rhythms.</p>
                 </div>
               </div>
             </div>
