--- a/templates/works.html
+++ b/templates/works.html
@@ -56,7 +56,7 @@
       <div class="col-sm-8 col-sm-offset-2 section-container-spacer">
         <div class="text-center">
           <h1 class="h2">02 : Works</h1>
-          <p>Here, I have given the projects and works I have done in my career.</p>
+          <p>Here, I humbly present a glimpse into the various projects and works that have shaped my career. These experiences reflect my journey and the valuable lessons learned along the way.</p>
         </div>
       </div>
 
@@ -69,24 +69,24 @@
                 <div class="row">
                     <div class="col-sm-4">
 
-                      <a href="./work.html" title="" class="black-image-project-hover">
+                  
                         <img src="./static/assets/images/plant.jpeg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>001/002</h4>
                         <h3>Plant Monitoring System</h3>
-                        <p>This monitors the condition of the plant and allows us to remotely monitor the plant. </p>
+                        <p>The Plant Monitoring System project is an innovative initiative that involves the development of a comprehensive system for observing and assessing the condition of plants. This technology enables remote monitoring, providing real-time insights into the plant's health and environmental conditions. By incorporating sensors and IoT devices, the project facilitates efficient tracking of key parameters such as soil moisture, temperature, and light levels. This not only empowers plant enthusiasts with valuable information but also serves as a practical tool for enhancing plant care and management practices. </p>
                   
                       </div>
                     </div>
                     <div class="col-sm-4">
-                      <a href="./work.html" title="" class="black-image-project-hover">
+                      
                         <img src="./static/assets/images/smsspam.png" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>002/002</h4>
                         <h3>SMS spam Classification</h3>
-                        <p>This classifies an email as ham/spam</p>
+                        <p>In the SMS spam classification project, I designed and implemented a system aimed at effectively differentiating between spam and non-spam messages. The project involved leveraging various data analysis techniques and employing classification algorithms to create a robust solution. By meticulously analyzing message content and employing machine learning principles, the system achieved accurate identification, contributing to the broader field of data science and cybersecurity.</p>
                       
                       </div>
                     </div>
